test/Fail/Issue6287-2.agda
{-# OPTIONS --erased-cubical --erasure #-}

open import Issue6287-2.Cubical

r : R
r = record { n = 12 }
